  quit (bug 3332.)
- Windows: Visual Studio project file updates.
- OS/2: fixes and Watcom makefile updates.
- Linux, joystick: fix invalid coef when axis min > axis max.
- Linux, joystick: remove deadzone and output axis values in correct
  range (bug 5241.)
- Linux, joystick: enhance detection of gamepads.
- Linux, joystick: allow for custom joystick names.
- FreeBSD, joystick: compile fixes.
- BSD, joystick: increase the number of uhid devices to scan (bug 1561)
- Linux, ALSA: fix excessive I/O causing high CPU usage (bug 4941.)
- Linux, evdev: ignore joystick axis events if they aren't in a sane
  range.
- Linux, joystick: fix Dualshock 3's motion sensors overwrite analog
  stick: protect against any axis that isn't reported by EVIOCGBIT but
  still sending EV_ABS events (bug 3193.)
- FreeBSD, cdrom: fix CDROM detection misbehaviour for 7.x and newer
  (bug 1529.)
- Solaris, audio: fix pulseaudio dynamic linking.
- Solaris, cpuinfo: fix asm syntax error causing build failures.
- Atari: multiple platform code updates.
- RISC OS: cleanups to platform code.
- RISC OS: fix thread starvation in fullscreen mode.
- RISC OS: fix returning from full-screen to 16M colour modes.
- RISC OS: fix receiving PreQuit messages.
- RISC OS: ensure the window size is consistent at different DPIs.
- RISC OS, video: add support for more pixel formats.
- RISC OS: mouse fixes. restore mouse palette when exiting while mouse
  is in focus. don't reset mouse focus when recreating the window.
- RISC OS: support Windows and Menu key input.
- RISC OS: implement SDL_WM_IconifyWindow()
- RISC OS: send SDL_APPACTIVE events when iconizing the window.
- RISC OS: support creating windows with the SDL_NOFRAME flag set.
- RISC OS: increase the number of supported joystick buttons.
- Configuration: fix library detection selecting wrong lib (bug 2795.)
- Configuration: fix detecting dynamic library support on powerpc64le
  (bug 3481.)