@@ -182,6 +182,9 @@ Changes include:
   FreeBSD, joystick: compile fixes.
 </P>
 <P>
+  BSD, joystick: fix USB joystick input for FreeBSD 9.0+ (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1552">1552</a>)
+</P>
+<P>
   BSD, joystick: increase the number of uhid devices to scan (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=1561">1561</a>)
 </P>
 <P>
